# pong-clone

./: CMakeLists.txt  README.md
dependencies/imgui/lib/: imgui_impl_glfw.cpp
include/: camera.h  context.h  entity.h  entitymanager.h  game.h  gameObject.h  graphics.h  gui.h  guimanager.h  input.h  log.h  physics.h  primitives.h  shaderHandler.h
res/shaders/: ballFragment.shader  texturedfragment.shader  texturedvertex.shader  vertex.shader
src/: camera.cpp  context.cpp  entity.cpp  entitymanager.cpp  game.cpp  gameObject.cpp  graphics.cpp  gui.cpp  guimanager.cpp  input.cpp  log.cpp  physics.cpp  pong.cpp  primitives.cpp  shader.cpp  shaderHandler.cpp
